TestSuite/Verification/Error/Parallel/Correctness/On-Device/Intra-Region/CPU/MapNestedTest.par
MapNestedTest{

map increment([Int] input): [Int] res{
    res[INDEX] = input[INDEX] + 1
}

map matrixIncrement([[Int]] input) : [[Int]] res{
    res[INDEX] = increment<<<>>>(input[INDEX])
}

seq main() : Int {
    var [[Int]] initial = init_List([200,200],1)
    var [[Int]] result = init_List([200,200])
    var [[Int]] result_seq = init_List([200,200])
    
    /*execute the pattern on node 0 device 0 */
    result = matrixIncrement<<<[0,0,0]>>>(initial)
    
    
    for var Int i = 0; i < 200; i++ {
        for var Int j = 0; j < 200; j++ {        
            result_seq[i][j] = initial[i][j] + 1
            if result_seq[i][j] != result[i][j] {
                print("value at element " {i} "," {j} " is wrong!")
                exit(1)
            }
        }
    }
    
return 0 
}}
